sc code & encoding fix for HC